--- a/style.css
+++ b/style.css
@@ -198,3 +198,7 @@ body {
 #start-btn:hover {
     background-color: #ff1493;
 }
+/* Utility class to hide things */
+.hidden {
+    display: none;
+  }
