--- a/style.css
+++ b/style.css
@@ -198,3 +198,11 @@ body {
 #start-btn:hover {
     background-color: #ff1493;
 }
+.question-img {
+    max-width: 100%;
+    height: auto;
+    margin: 15px 0;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  }
+  
